--- a/README
+++ b/README
@@ -1,13 +1,3 @@
-INSTRUÇÕES PARA VIZUALIZAR PROJETO
-
-API (api-lojistas):
-versão do NodeJs: 10.19.0
-banco usado: mongoDb
-
-As informações estão sendo gravadas via cloud (https://www.mongodb.com/cloud), cuja configuração se encontra no projeto, no arquivo server.js. Caso seja necessário fazer os testes localmente, a configuração se encontra comentada no código, só mudar o acesso.
-
-script de inicialização da api: node server.js
-
-PLUGIN (lojistas)
+PLUGIN PARA CADASTRO E EDIÇÃO DE LOJISTAS.
 
 
